--- a/todolist/src/App.css
+++ b/todolist/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+h1 {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 5rem;  
+  margin-left: 25%;
+  margin-right: 25%;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  font: 1rem;
+  color: white;
+  
+}
+
+form {
+  width: 70%;
+  margin-left: 25%;
+  margin-right: 25%;
+  max-width: 25rem;
+  display: flex;
+  flex-direction: row;
+  justify-content:space-around;
+}
+
+ul{
+  list-style: none;
+}
+
+.todo{
+  display: flex;
+  margin-top: 2em;
+}
+
+.container{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
